upload and show pdf

--- a/templates/views/about-us.hbs
+++ b/templates/views/about-us.hbs
@@ -21,7 +21,7 @@
         <p>在深圳大学建校36周年之际，为弘扬母校精神，培育校友文化，满足校友“常回家看看”的美好愿望，时差12小时的地球那一边，我们深大安省校友会2019年7月6日在加拿大多伦多正式成立。“树高千尺总有根，水流万里终有源”，谨记着“自立、自律、自强”的校训，往日脚踏实地的深大学子们在异国他乡建立起一座同根同源的海外家园，可喜可贺！</p>
         <p>深大安省校友会建立的宗旨是搭建健康积极向上的交流平台，促进校友之间的联系、协调和合作，包括和不限于：联合校友，谋求及维护在海外的共同的权益与福利；提升校友作为中国移民在加拿大安省的地位与影响力；推动校友之间的联谊活动，包括学术，文化和商务交流 ；加强校友与母校之间的联系，开展和支持与其他校友会之间的联谊活动。</p>
         <p>过去几年，在各类高校组织的活动中，包括高校杯各类运动竞赛，乒乓球、高尔夫球、羽毛球、排球、拔河，春晚，联谊等，校友们自发组织，自费参与，并在各个项目取得了有目共睹的好成绩。这在没有成立校友会，没有财政支持的各高校中是绝无仅有的！校友们在活动中增强了集体荣誉感和校友之间的凝聚力，深大校友的风采也在加拿大华人圈里广为人知，安省校友会就是在这种氛围里应运而生。</p>
-        <a href="/files/深圳大学安大略省校友会章程.pdf" target="_blank" download> 《深圳大学安大略省校友会章程.pdf》 下载 >> </a>
+        <a href="/files/深圳大学安大略省校友会章程.pdf" target="_blank"> 《深圳大学安大略省校友会章程.pdf》 下载 >> </a>
     </div>
 </div>
 
