--- a/templates/views/downloads.hbs
+++ b/templates/views/downloads.hbs
@@ -17,7 +17,7 @@
     <div class="about-us w-75 mx-auto py-3">
         <h3 class="mb-3" style="color:#bc1e58"><b>文件下载：</b></h3>
         {{# files}}
-        <div class="my-3"><a href="/files/downloads{{file_path}}" target="_blank" download> 《{{file_name}}》 下载 >> </a></div>
+        <div class="my-3"><a href="/files/downloads{{file_path}}" target="_blank"> 《{{file_name}}》 下载 >> </a></div>
         {{/ files}}
         
     </div>
