--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -20,18 +20,29 @@
             <button type="button" id="edit" class="btn btn-outline-primary my-3 d-block">编辑</button>
             <button type="button" id="delete" class="btn btn-outline-primary my-3 d-block">删除</button>
         </div>
-        
         {{/if}}
-        <p id="event_id" class="sr-only">{{id}}</p>
+
+        <p id="event_id" class="sr-only">{{_id}}</p>
         <h3 class="text-center mb-3">{{title}}</h3>
         <div class="d-flex flex-wrap my-3 justify-content-around">
             <small class="text-danger font-weight-bold">活动日期：{{event_date}}</small><small>作者：{{author}}</small><small>发表日期：{{create_date}}</small>
         </div>
+
         {{breaklines content}}
+
+        {{#if pdf}}
+        <div class="pdf-body mt-3">
+            <a id="pdf" href="{{pdf}}"></a>
+        </div>
+        {{/if}}
+
     </div>
 </div>
 
 <script>
+
+    $('#pdf').media({width: '100%',height: '600px',autoplay: true});
+
     $('#edit').on('click', () => {
         alert('待开发....')
     });
