delete event and pdf at sametime

--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -44,7 +44,7 @@
     $('#pdf').media({width: '100%',height: '600px',autoplay: true});
 
     $('#edit').on('click', () => {
-        alert('待开发....')
+        alert('待开发....但您可以删除文章再重发')
     });
 
     $('#delete').on('click', () => {
