--- a/templates/views/members.hbs
+++ b/templates/views/members.hbs
@@ -14,7 +14,7 @@
 <div class="container-fluid" id="members">
     <div class="w-75 mx-auto members table-responsive">
         <table class="table table-hover table-bordered text-center">
-            <caption>成员架构 Update:2019</caption>
+            <caption>成员架构 Update: {{update}}</caption>
             <thead>
                 <tr>
                     <th scope="col">姓名</th>
@@ -22,70 +22,12 @@
                 </tr>
             </thead>
             <tbody>
+                {{# members}}
                 <tr>
-                    <td>孙晋 William</td>
-                    <td>会长</td>
+                    <td>{{name}}</td>
+                    <td>{{title}}</td>
                 </tr>
-
-                <tr>
-                    <td>丁杰 Jeff</td>
-                    <td>副会长</td>
-                </tr>
-
-                <tr>
-                    <td>阮海丽 Kimberly</td>
-                    <td>秘书长</td>
-                </tr>
-
-                <tr>
-                    <td>曾小萍 Grace</td>
-                    <td>执行会长</td>
-                </tr>
-
-                <tr>
-                    <td>陈国兴 Bryan</td>
-                    <td>财务长</td>
-                </tr>
-
-                <tr>
-                    <td>周迅梅 Lydia</td>
-                    <td>法务长</td>
-                </tr>
-
-                <tr>
-                    <td>纪汉京 Jeffrey</td>
-                    <td>理事</td>
-                </tr>
-
-                <tr>
-                    <td>林昕 Kevin</td>
-                    <td>理事</td>
-                </tr>
-
-                <tr>
-                    <td>谢火钦</td>
-                    <td>理事</td>
-                </tr>
-
-                <tr>
-                    <td>李碧君 Vanessa</td>
-                    <td>理事</td>
-                </tr>
-
-                <tr>
-                    <td>戴劲 David</td>
-                    <td>理事</td>
-                </tr>
-
-                <tr>
-                    <td>苏涛</td>
-                    <td>理事</td>
-                </tr>
-                
-                <tr>
-                    <td>辛亚飞</td>
-                    <td>理事</td>
-                </tr>
+                {{/ members}}
             </tbody>
         </table>
     </div>
