--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -83,7 +83,7 @@
 
 <script>
 
-    $( ".carousel-inner" ).children('.company-cover:nth-child(1)').addClass( "active" );
+    $('.carousel-inner').children('.carousel-item:nth-child(1)').addClass( "active" );
 
     $('#category .card').on('click', (e) => {
         let destination = e.target.getAttribute('data-target');
