--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,7 +69,7 @@ a:hover {
 }
 
 #carousel .carousel-item .carousel-words-box .carousel-words h3 {
-    margin-top: 4%;
+    /* margin-top: 4%; */
     font-size: 4vw;
     color: inherit;
     font-weight: bold;
