--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -44,7 +44,7 @@
                     <div id="{{id}}" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             {{# logo}}
-                            <div class="carousel-item company-cover">
+                            <div class="carousel-item">
                                 <img src="{{logo-link}}" class="card-img-top">
                             </div>
                             {{/ logo}}
