--- a/templates/views/sport-teams.hbs
+++ b/templates/views/sport-teams.hbs
@@ -33,7 +33,7 @@
                         </div>
                         <div class="p-3">
                             <p><b>队长: {{leader}}</b></p>
-                            <p>成员: {{members}}</p>
+                            <p class="text-justify">成员: {{members}}</p>
                         </div>
                     </div>
                 </div>
