--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -17,10 +17,10 @@
                         <a class="nav-link" href="/about-us">关于我们</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/members">成员架构</a>
+                        <a class="nav-link" href="/members">理事会</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/downloads">文件下载</a>
+                        <a class="nav-link" href="/downloads">历史资料</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#donateModal">热心捐赠</a>
