--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="/about-us">关于我们</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/members">成员架构</a>
+                    <a class="nav-link" href="/members">理事会</a>
                 </li>
             </ul>
         </div>
