--- a/templates/views/downloads.hbs
+++ b/templates/views/downloads.hbs
@@ -6,7 +6,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">首页</a></li>
-            <li class="breadcrumb-item active" aria-current="page">文件下载</li>
+            <li class="breadcrumb-item active" aria-current="page">历史资料</li>
         </ol>
     </nav>
 </div>
@@ -15,7 +15,7 @@
 <div class="container-fluid" id="downloads">
     
     <div class="about-us w-75 mx-auto py-3">
-        <h3 class="mb-3" style="color:#bc1e58"><b>文件下载：</b></h3>
+        <h3 class="mb-3" style="color:#bc1e58"><b>历史资料：</b></h3>
         {{# files}}
         <div class="my-3"><a href="/files/downloads{{file_path}}" target="_blank"> 《{{file_name}}》 下载 >> </a></div>
         {{/ files}}
