--- a/templates/views/members.hbs
+++ b/templates/views/members.hbs
@@ -6,7 +6,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">首页</a></li>
-            <li class="breadcrumb-item active" aria-current="page">成员架构</li>
+            <li class="breadcrumb-item active" aria-current="page">理事会</li>
         </ol>
     </nav>
 </div>
@@ -14,7 +14,7 @@
 <div class="container-fluid" id="members">
     <div class="w-75 mx-auto members table-responsive">
         <table class="table table-hover table-bordered text-center">
-            <caption>成员架构 Update: {{update}}</caption>
+            <caption>深大安省校友会理事会 Update: {{update}}</caption>
             <thead>
                 <tr>
                     <th scope="col">姓名</th>
