--- a/templates/views/sport-teams.hbs
+++ b/templates/views/sport-teams.hbs
@@ -32,8 +32,14 @@
                             <img src="{{image}}" class="w-100">
                         </div>
                         <div class="p-3">
-                            <p><b>队长: {{leader}}</b></p>
-                            <p class="text-justify">成员: {{members}}</p>
+                            <p><b>队长: {{header}}</b></p>
+                            <p>领队: {{leader}}</p>
+                            {{# members}}
+                            <p class="my-0">{{team}}成员: {{names}}</p>
+                            {{/ members}}
+                            {{#if note}}
+                            <p><i>{{note}}</i></p>
+                            {{/if}}
                         </div>
                     </div>
                 </div>
