--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -47,28 +47,28 @@
 <div class="container-fluid" id="features">
     <div class="row w-75 mx-auto mb-3">
         <div class="col-md-4 mt-5">
-            <a href="/enterprise">
-                <div class="mx-auto text-center">
+            <div class="mx-auto text-center">
+                <a href="/enterprise" class="d-flex flex-column">
                     <i class="far fa-building fa-7x"></i>
-                </div>
-                <p>校友企业</p>
-            </a>
+                    <p>校友企业</p>
+                </a>
+            </div>
         </div>
         <div class="col-md-4 mt-5">
-            <a href="/sport-teams">
-                <div class="mx-auto text-center">
+            <div class="mx-auto text-center">
+                <a href="/sport-teams" class="d-flex flex-column">
                     <i class="fas fa-dumbbell fa-7x"></i>
-                </div>
-                <p>文娱队伍</p>
-            </a>
+                    <p>文娱队伍</p>
+                </a>
+            </div>
         </div>
         <div class="col-md-4 mt-5">
-            <a href="/events">
-                <div class="mx-auto text-center">
+            <div class="mx-auto text-center">
+                <a href="/events" class="d-flex flex-column">
                     <i class="far fa-newspaper fa-7x"></i>
-                </div>
-                <p>活动动态</p>
-            </a>
+                    <p>活动动态</p>
+                </a>
+            </div>
         </div>
     </div>
 </div>
