--- a/templates/views/sport-teams.hbs
+++ b/templates/views/sport-teams.hbs
@@ -33,7 +33,9 @@
                         </div>
                         <div class="p-3">
                             <p><b>队长: {{header}}</b></p>
+                            {{#if leader}}
                             <p>领队: {{leader}}</p>
+                            {{/if}}
                             {{# members}}
                             <p class="my-0">{{team}}成员: {{names}}</p>
                             {{/ members}}
