--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,7 +16,7 @@
                         <div class="carousel-words">
                             <h3>{{heandline}}</h3>
                             {{# subtitle}}
-                            <p class="text-justify">{{content}}</p>
+                            <p>{{content}}</p>
                             {{/ subtitle}}
                             {{#if footer}}
                             <blockquote class="blockquote text-right">
