modify members to council

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -17,7 +17,7 @@
                         <a class="nav-link" href="/about-us">关于我们</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/members">理事会</a>
+                        <a class="nav-link" href="/council">理事会</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/downloads">历史资料</a>
