--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -31,7 +31,7 @@
         {{breaklines content}}
 
         {{#if pdf}}
-        <div class="pdf-body mt-3">
+        <div class="w-100 pdf-body mt-3">
             <a id="pdf" href="{{pdf}}"></a>
         </div>
         {{/if}}
