--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -34,6 +34,7 @@
 
         {{#if pdf}}
         <div class="w-100 pdf-body mt-3">
+            <p>若不能正常显示，<a href="{{pdf}}" target="_blank">请点这里</a></p>
             <a id="pdf" href="{{pdf}}"></a>
         </div>
         {{/if}}
