--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -108,7 +108,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Please email to <a href="mailto:gordonyuzr@gmail.com">gordonyuzr@gmail.com</a></p>
+                        <p>Please email to <a href="mailto:gordonyuzr@gmail.com">szuaao@gmail.com</a></p>
                     </div>
                 </div>
             </div>
