--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -37,7 +37,7 @@
             <p class="my-3">若<b>PDF</b>不能正常显示，<a href="{{pdf}}" target="_blank">请点这里</a></p>
             {{!-- <embed class="w-100" height="600" src="{{pdf}}" type="application/pdf"> --}}
             {{!-- <embed class="w-100" height="600" src="{{pdf}}" type="application/pdf"> --}}
-            <iframe src="https://docs.google.com/gview?url=https://szualumni.org/public{{pdf}}&embedded=true" style="height: 640px;" frameborder="0"></iframe>
+            <iframe src="https://docs.google.com/gview?url=https://szualumni.org{{pdf}}&embedded=true" style="height: 640px;" frameborder="0"></iframe>
         </div>
 
         
