--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -41,7 +41,7 @@
 
         <script>
             $('#pdf-frame').ready(function() {
-                $('#pdf-frame').attr('src', 'https://docs.google.com/gview?url=http://'+ document.domain + {{pdf}} + '&embedded=true')
+                $('#pdf-frame').attr('src', 'https://docs.google.com/gview?url=http://'+ document.domain + '{{pdf}}' + '&embedded=true')
             })
         </script>
 
