--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -36,7 +36,7 @@
         <div class="w-100 pdf-body mt-3">
             <p class="my-3">若<b>PDF</b>不能正常显示，<a href="{{pdf}}" target="_blank">请点这里</a></p>
             {{!-- <embed class="w-100" height="600" src="{{pdf}}" type="application/pdf"> --}}
-            <iframe id="pdf-frame" style="height: 640px;" frameborder="0"></iframe>
+            <iframe id="pdf-frame" class="w-100" height="600" frameborder="0"></iframe>
         </div>
 
         <script>
