set p to pre-wrap

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -65,7 +65,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-justify">
                                 <h5><b>捐赠校友会</b></h5>
                                 <span>请热心校友将捐款e-transfer到校友会财务长Bryan Chen的邮箱：</span><br>
                                 <span><b>bryanchen2013@gmail.com</b></span><br>
