--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,6 +24,8 @@ span {
     font-family: "Microsoft YaHei", 微软雅黑, "MicrosoftJhengHei", 华文细黑,
         STHeiti, MingLiu, "宋体", Arial, Helvetica, sans-serif;
     color: #333;
+    word-wrap: break-word;
+    white-space:pre-wrap;
 }
 
 a:hover {
