--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -35,16 +35,8 @@
         {{#if pdf}}
         <div class="w-100 pdf-body mt-3">
             <p class="my-3">若<b>PDF</b>不能正常显示，<a href="{{pdf}}" target="_blank">请点这里</a></p>
-            {{!-- <embed class="w-100" height="600" src="{{pdf}}" type="application/pdf"> --}}
-            <iframe id="pdf-frame" class="w-100" height="600" frameborder="1"></iframe>
+            <embed class="w-100" height="600" src="{{pdf}}" type="application/pdf">
         </div>
-
-        <script>
-            $('#pdf-frame').ready(function() {
-                $('#pdf-frame').attr('src', 'https://docs.google.com/gview?url=http://'+ document.domain + '{{pdf}}' + '&embedded=true')
-            })
-        </script>
-
         {{/if}}
 
     </div>
