--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -36,7 +36,7 @@
         <div class="w-100 pdf-body mt-3">
             <p class="my-3">若<b>PDF</b>不能正常显示，<a href="{{pdf}}" target="_blank">请点这里</a></p>
             {{!-- <embed class="w-100" height="600" src="{{pdf}}" type="application/pdf"> --}}
-            <object data="{{pdf}}" type="application/pdf" class="w-100" height="600">
+            <object data="{{pdf}}" type="application/pdf" width="100%" height="100%">
                 <p>Your web browser doesn't have a PDF plugin.
                 Instead you can <a href="{{pdf}}" target="_blank">click here to
                 open the PDF file.</a></p>
