add michael company

--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -64,7 +64,9 @@
                     {{# info}}
                     <p class="card-text my-0">{{content}}</p>
                     {{/ info}}
+                    {{#if website}}
                     <a href="{{website}}" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
+                    {{/if}}
                 </div>
                 <div class="card-footer text-right">
                     <small class="text-muted d-block">{{name}}</small>
