--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,7 +25,11 @@ span {
         STHeiti, MingLiu, "宋体", Arial, Helvetica, sans-serif;
     color: #333;
     word-wrap: break-word;
-    white-space:pre-wrap;
+}
+
+p,
+span {
+    white-space: pre-wrap;
 }
 
 a:hover {
